k8s_deployments/nextcloud/nextcloud-auxiliary.yml
# This cronjob will spawn a pod to run background jobs.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-inotify
  annotations:
    field.cattle.io/description: inotify implementation for nextcloud
  namespace: default
spec:
  replicas: 1
  strategy: 
    type: Recreate
  revisionHistoryLimit: 0  # Cleaning up all old replicasets
  selector: 
    matchLabels: 
     app: php-fpm
     service: nextcloud-inotify
  template:
    metadata:
      labels:
        app: php-fpm
        service: nextcloud-inotify
    spec:
      containers:
      - image: internal-repo.local.dudoleitor.com:5000/php-inotify-82:v0.0.1
        imagePullPolicy: IfNotPresent
        name: php82-inotify
        volumeMounts:
        - mountPath: /inotify-config.ini
          name: inotify-conf
          subPath: config.ini
          readOnly: true
        - mountPath: /var/www/html
          name: webroot
        - mountPath: /usr/local/etc/php/conf.d/logging.ini
          name: confs
          subPath: logging.ini
          readOnly: true
        - mountPath: /usr/local/etc/php/conf.d/nextcloud.ini
          name: confs
          subPath: nextcloud.ini
          readOnly: true
        - mountPath: /usr/local/etc/php/conf.d/redis-session.ini
          name: confs
          subPath: redis-session.ini
          readOnly: true
        - mountPath: /etc/ssl/certs/ca-certificates.crt
          name: certs-store
          subPath: ca-certificates.crt
          readOnly: true
        - mountPath: /dev/urandom  # Needed to improve random numbers generation
          name: urandom
          readOnly: true
        - mountPath: /tmp
          name: cache-tmp
          subPath: tmp
        # We are mounting each user folder separately
        - mountPath: /var/www/html/nextcloud/data/edoardo/files
          name: nfs-homes
          subPath: edoardo
        - mountPath: /var/www/html/nextcloud/data/edoardo/files_trashbin
          name: nfs-trash
          subPath: edoardo

        - mountPath: /mnt/shared-videos
          name: nfs-videos
        - mountPath: /mnt/shared-docs
          name: nfs-docs
        - mountPath: /mnt/shared-photos
          name: nfs-photos
        resources:  # Limiting resources is always better, adjust accordingly
          limits:
            cpu: 300m
            memory: 256Mi
          requests:
            cpu: 125m
            memory: 128Mi
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
          runAsUser: 65200
          runAsGroup: 65200
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
      dnsPolicy: ClusterFirst
      securityContext:
        fsGroup: 65200
        supplementalGroups: [100, 993]  # To access the NFS shares
        runAsUser: 65200
        runAsGroup: 65200
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 10
      volumes:
      - name: inotify-conf
        configMap:
          name: nextcloud-inotify
      - name: webroot
        persistentVolumeClaim:
          claimName: nextcloud-vol  # Needs to be created manually in longhorn
      - name: confs
        configMap:
          name: nextcloud-php
      - name: certs-store
        hostPath:
          path: /etc/ssl/certs
      - name: urandom
        hostPath:
          path: /dev/urandom
      - name: cache-tmp
        emptyDir: {}

      # Each user folder will be mounted using subPath
      - name: nfs-homes
        nfs:
          path: /homes
          server: litecoin-internal.local.dudoleitor.com
      - name: nfs-trash
        nfs:
          path: /k3s-cluster/nextcloud-trash
          server: litecoin-internal.local.dudoleitor.com

      - name: nfs-videos
        nfs:
          path: /videos
          server: litecoin-internal.local.dudoleitor.com
      - name: nfs-docs
        nfs:
          path: /documents
          server: litecoin-internal.local.dudoleitor.com
      - name: nfs-photos
        nfs:
          path: /photos
          server: litecoin-internal.local.dudoleitor.com
